--- a/distribuidor.html
+++ b/distribuidor.html
@@ -214,7 +214,7 @@
                         <div class="rason__target__grid__item">
 
                             <div class="rason__target__grid__item__imagen">
-                                <img src="./img/distributor/img-1.jpg" alt="imagenone" width="100%" height="100%" />
+                                <img src="./img/distributor/img-1.webp" alt="imagenone" width="100%" height="100%" />
                             </div>
 
                             <p>20 años</p>
@@ -224,7 +224,7 @@
                         <div class="rason__target__grid__item">
 
                             <div class="rason__target__grid__item__imagen">
-                                <img src="./img/distributor/img-2.jpg" alt="imagenTwo" width="100%" height="100%" />
+                                <img src="./img/distributor/img-2.webp" alt="imagenTwo" width="100%" height="100%" />
                             </div>
 
                             <p>Te brindamos</p>
@@ -234,7 +234,7 @@
                         <div class="rason__target__grid__item">
 
                             <div class="rason__target__grid__item__imagen">
-                                <img src="./img/distributor/img-3.jpg" alt="imagenThree" width="100%" height="100%" />
+                                <img src="./img/distributor/img-3.webp" alt="imagenThree" width="100%" height="100%" />
                             </div>
 
                             <p>Gran oportunidad de negocio.</p>
@@ -266,7 +266,7 @@
 						<!-- Slides -->
 						<div class="swiper-slide  distributor__carousel__slide">
 							<div class="distributor__carousel__slide__imagen">
-								<img src="./img/distributor/empresa.jpg" alt="carousel_productos" width="100%" height="100%" />
+								<img src="./img/distributor/empresa.webp" alt="carousel_productos" width="100%" height="100%" />
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>1.-Tu empresa</h1>
@@ -281,7 +281,7 @@
 						<!-- Slides -->
 						<div class="swiper-slide  distributor__carousel__slide">
 							<div class="distributor__carousel__slide__imagen">
-								<img src="./img/distributor/comercializacion.jpg" alt="carousel_productos" width="100%" height="100%" />
+								<img src="./img/distributor/comercializacion.webp" alt="carousel_productos" width="100%" height="100%" />
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>2.- Comercialización</h1>
@@ -294,7 +294,7 @@
 						<!-- Slides -->
 						<div class="swiper-slide  distributor__carousel__slide">
 							<div class="distributor__carousel__slide__imagen">
-								<img src="./img/distributor/personal.jpg" alt="carousel_productos" width="100%" height="100%" />
+								<img src="./img/distributor/personal.webp" alt="carousel_productos" width="100%" height="100%" />
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>3.- Personal</h1>
@@ -308,7 +308,7 @@
 						<!-- Slides -->
 						<div class="swiper-slide  distributor__carousel__slide">
 							<div class="distributor__carousel__slide__imagen">
-								<img src="./img/distributor/experiencia.jpg" alt="carousel_productos" width="100%" height="100%" />
+								<img src="./img/distributor/experiencia.webp" alt="carousel_productos" width="100%" height="100%" />
 							</div>
 							<div class="distributor__carousel__slide__text">
 								<h1>4.- Experiencia</h1>
