--- a/contacto.html
+++ b/contacto.html
@@ -206,7 +206,7 @@
 
 				<div class="grid__item">
 					<div class="grid__item__imagen">
-						<img src="./img/contact/monitoreo.jpg" alt="Imagen" width="100%" height="100%"/>
+						<img src="./img/contact/monitoreo.webp" alt="Imagen" width="100%" height="100%"/>
 					</div>
 					<p>Incluye monitoreo y soporte en tu contratación.
 						¡Obtenlo ahora!</p>
@@ -214,7 +214,7 @@
 
 				<div class="grid__item">
 					<div class="grid__item__imagen">
-						<img src="./img/contact/producto.jpg" alt="Imagen" width="100%" height="100%"/>
+						<img src="./img/contact/producto.webp" alt="Imagen" width="100%" height="100%"/>
 					</div>
 					<p>Incluye monitoreo y soporte en tu contratación.
 						¡Obtenlo ahora!</p>
@@ -222,7 +222,7 @@
 
 				<div class="grid__item">
 					<div class="grid__item__imagen">
-						<img src="./img/contact/ahorro.jpg" alt="Imagen" width="100%" height="100%"/>
+						<img src="./img/contact/ahorro.webp" alt="Imagen" width="100%" height="100%"/>
 					</div>
 					<p>Incluye monitoreo y soporte en tu contratación.
 						¡Obtenlo ahora!</p>
@@ -237,7 +237,7 @@
 				<div class="contact__location">
 
 					<div class="contact__location__map">
-						<img src="./img/contact/map.jpg" alt="map" width="100%" height="100%" />
+						<img src="./img/contact/map.webp" alt="map" width="100%" height="100%" />
 					</div>
 
 					<div class="contact__location__text">
@@ -245,7 +245,7 @@
 
 						<div class="contact__location__text__information">
 							<div class="contact__location__text__information__icon">
-								<img src="./img/contact/ubi.png" alt="icon" width="100%" height="100%"/>
+								<img src="./img/contact/ubi.webp" alt="icon" width="100%" height="100%"/>
 							</div>
 
 							<p>Puerto Maya M2 Lt7 Calzada Puerto Maya No Ext 3San Pedro C. P 77733 Zona Puerto Solidaridad</p>
@@ -254,7 +254,7 @@
 
 						<div class="contact__location__text__information">
 							<div class="contact__location__text__information__icon">
-								<img src="./img/contact/tel.png" alt="icon" width="100%" height="100%"/>
+								<img src="./img/contact/tel.webp" alt="icon" width="100%" height="100%"/>
 							</div>
 
 							<p>01 (984) 802 9048 | 01 (984) 802 8571 | 01 (984) 688 5836</p>
@@ -263,7 +263,7 @@
 
 						<div class="contact__location__text__information">
 							<div class="contact__location__text__information__icon">
-								<img src="./img/contact/mail.png" alt="icon" width="100%" height="100%"/>
+								<img src="./img/contact/mail.webp" alt="icon" width="100%" height="100%"/>
 							</div>
 
 							<p>contacto@yanopagoluz.mx</p>
@@ -329,7 +329,7 @@
 						</form>
 
 						<div class="contact__contact__imagen">
-							<img src="./img/contact/factura.jpg" alt="recibo" width="100%" height="100%" />
+							<img src="./img/contact/factura.webp" alt="recibo" width="100%" height="100%" />
 						</div>
 
 					</div>
