--- a/plantilla.html
+++ b/plantilla.html
@@ -98,7 +98,7 @@
 							<div class="header__desktop__pages--four__form__circle"></div>
 						</div>
 					</a>
-					<a class="header__desktop__pages--six" href="" >
+					<a class="header__desktop__pages--six" href="https://www.yanopagoluz.mx/blog/" >
 						BLOG
 
 						<div class="header__desktop__pages--six__form">
@@ -162,7 +162,7 @@
 				<hr><a class="menu__link--three" href="./servicios.html" >OFERTA DE SERVICIOS</a><hr>
 				<a class="menu__link--four" href="./products.html" >PRODUCTOS</a><hr>
 				<a class="menu__link--five" href="./distribuidor.html" >¿CÓMO SOY DISTRIBUIDOR?</a><hr>
-				<a class="menu__link--six" href="" >BLOG</a><hr>
+				<a class="menu__link--six" href="https://www.yanopagoluz.mx/blog/" >BLOG</a><hr>
 				<a class="menu__link--seven" href="./contacto.html" >CONTACTO</a>
 			</div>
 			
