--- a/contacto.html
+++ b/contacto.html
@@ -216,16 +216,17 @@
 					<div class="grid__item__imagen">
 						<img src="./img/contact/producto.webp" alt="Imagen" width="100%" height="100%"/>
 					</div>
-					<p>Incluye monitoreo y soporte en tu contratación.
-						¡Obtenlo ahora!</p>
+					<p>Hasta un 25% de ahorro
+						en nuestros productos</p>
 				</div>
 
 				<div class="grid__item">
 					<div class="grid__item__imagen">
 						<img src="./img/contact/ahorro.webp" alt="Imagen" width="100%" height="100%"/>
 					</div>
-					<p>Incluye monitoreo y soporte en tu contratación.
-						¡Obtenlo ahora!</p>
+					<p>Genera electricidad
+						y ahorra hasta un 95%
+						de lo que gastas</p>
 				</div>
 
 
@@ -321,7 +322,7 @@
 							
 							<div class="contact__contact__form__checkbox">
 								<input type="checkbox"/> 
-								<p style="padding-bottom: 0; color: #F7C50A;">Acepto las Políticas de privacidad</p>	
+								<p style="padding-bottom: 0; color: #F7C50A;">Acepto las políticas de privacidad</p>	
 							</div>	
 							
 							<button type="submit" name="enviar" value="Send" class="contact__contact__form__button" id="button">Enviar</button>						
