--- a/products.html
+++ b/products.html
@@ -257,8 +257,7 @@
 
                 <div class="panels__text">
                     <h1>Paneles fotovoltaicos</h1>
-                    <p>Ahorra energía rápida instalación, ahorro hasta del 100% implementalo en tu casa, comercio y/o residencia.
-                        ¡Adquierelos!.</p>
+                    <p>¡Ahorra el máximo de energía! Mediante una rápida instalación que reduce hasta el 100% de tu consumo de energía eléctrica al implementar paneles solares en tu casa, comercio y/o residencia. ¡Adquierelos!</p>
                 </div>
             </div>
         </div>
