--- a/servicios.html
+++ b/servicios.html
@@ -224,7 +224,7 @@
             <div class="renewable">
 
                 <div class="renewable__title_subtitle">
-                    <h1>Energía renovable ¡Tu mejor opción!</h1>
+                    <h1>Energía renovable, ¡tu mejor opción!</h1>
                     <p>El uso de sistemas fotovoltaicos, térmicos solares o luminosos no es una moda, actualmente representa una excelente alternativa hacia las personas para que se ahorren mucho dinero.</p>
                 </div>
 
@@ -279,12 +279,9 @@
 			<div class="our_services__fotovoltaico ">
 					<div class="our_services__fotovoltaico__text container-sm">
 						<h1>Fotovoltaico</h1>
-						<p>Mediante el uso de ellos nuestros clientes se ahorran hasta el 95% de su dinero en los pagos que realizan
-							hacia CFE.</p>
+						<p>Mediante el uso de ellos, nuestros clientes se ahorran hasta el 95% de su dinero en los pagos que realizan hacia CFE.</p>
 						<br><h2>Interconexión</h2><br>
-						<p>Nuestros productos son los más confiables en el mercado, con nuestro sistema de interconexión solar
-							con la CFE, notaras desde el primer bimestre un gran ahorro garantizado en los pagos a tu recibo y
-							consumo eléctrico.</p><br>
+						<p>Nuestros productos son los más confiables en el mercado, con nuestro sistema de interconexión solar con CFE, notarás desde el primer bimestre un gran ahorro en los pagos a tu recibo y consumo eléctrico. ¡Garantizado!</p><br>
 							<br><h2>Los beneficios que te ofrecemos:</h2><br>
 						<p>> Instalación fácil de realizar sobre cualquier tipo de superficie.</p>
 						<p>> No requieren de mantenimiento.</p>
@@ -319,10 +316,7 @@
 			<div class="our_services__industria ">
 				<div class="our_services__industria__text container-sm">
 					<h1>Industria</h1>
-					<p>La gran oferta de servicios que ponemos a tu disposición, cumple con los requerimientos y
-						necesidades que un cliente necesita, ya sea, para el sector industrial o comercial. Nuestros productos
-						siempre están garantizados.</p>
-			
+					<p>La gran oferta de servicios que ponemos a tu disposición, cumple con los requerimientos y necesidades que cada cliente necesita, ya sea para el sector industrial o comercial, nuestros productos siempre están garantizados.</p>
 				</div>
 
 
@@ -347,8 +341,7 @@
 
 						<div class="benefit__grid__item__text">
 							<h1>Ahorro de hasta un 99%</h1>
-							<p>¡Deja de dar vueltas! reduce tus gastos de energía de
-									manera notable. Los paneles solares son tu mejor opción</p>
+							<p>¡Deja de dar vueltas! Reduce tus gastos de energía de manera notable. Nuestros paneles solares son tu mejor opción.</p>
 						</div>
 					</div>
 
@@ -360,8 +353,7 @@
 
 						<div class="benefit__grid__item__text">
 							<h1>Consumo mínimo de hasta 50%.</h1>
-							<p>Para nosotros es vital verte prosperar porque al crecer tú
-								crecemos todos.</p>
+							<p>Para nosotros es vital verte prosperar, por esa razón reducimos al máximo tu consumo energético.</p>
 						</div>
 					</div>
 
@@ -372,17 +364,16 @@
 						</div>
 
 						<div class="benefit__grid__item__text">
-							<h1>Servicio post-venta.</h1>
-							<p>Para nosotros es vital verte prosperar porque al crecer tú
-								crecemos todos.</p>
+							<h1>Servicio posventa.</h1>
+							<p>Damos seguimiento a nuestros productos y servicios para alargar la vida útil de los mismos.</p>
 						</div>
 					</div>
 						
 				</div>
 
-				<h1 class="subtitle" style="margin: 50px 0  10px 0 ;">Tu que pagas grandes cantidades de dinero en luz</h1>
+				<h1 class="subtitle" style="margin: 50px 0  10px 0 ;">Si eres de los que pagan grandes cantidades de dinero en luz…</h1>
 				<h1 class="subtitle"  style="margin: 10px 0  50px 0 ;"> ¡Te estamos buscando!</h1>
-				<p class="subtitle">Queremos que te ahorres ese dinero que gastas en tu consumo de luz y gas.Acércate con nosotros y ahórrate hasta un 95% de lo que gastas.</p>
+				<p class="subtitle">Queremos que te ahorres ese dinero que genera tu consumo de luz y gas. Acércate con nosotros y ahórrate hasta un 95% de lo que gastas.</p>
 				<a href="./contacto.html" class="benefit__button"  href="" >¡Cotiza hoy mismo!</a>
 			</div>
 		</div>
