--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 									<div class="hero__form--one__text">
 	
 										<h1>Ahorra hasta el 90%</h1>
-										<p>el pago de luz</p>
+										<p>en el pago de luz</p>
 	
 										<a href="./servicios.html" class="hero__form--one__text__button" href="">¡Quiero saber más!</button></a>
 	
@@ -235,7 +235,7 @@
 									<div class="hero__form--two__text">
 	
 										<h1>La industria hotelera</h1>
-										<p>una opción para implementar paneles solares </p>
+										<p>¡Una opción perfecta para implementar paneles solares! </p>
 	
 										<a href="./servicios.html" class="hero__form--two__text__button" href="">¡Quiero saber más!</button></a>
 	
@@ -320,7 +320,7 @@
 					<h1>¡Empieza a ganar ayudando a ahorrar!</h1>
 					<h2>¡Distribuye paneles y calentadores solares!</h2>
 					<p>México se encuentra en expansión en el mercado de las energías alternativas, se espera que en los próximos años este incremento sea considerablemente mayor. Si estás interesado en distribuir nuestros productos, llámanos para recibir más información y sepas nuestros beneficios.</p>
-					<h4>¡Ven y Forma parte de nuestro equipo!</h4>
+					<h4>¡Ven y forma parte de nuestro equipo!</h4>
 					<a href="./distribuidor.html" class="win_win__text__button">¡Comienza a ganar!</a>
 				</div>
 				<div class="win_win__imagen">
@@ -340,7 +340,7 @@
 
 				<div class="idea__content__text">
 					<h1>Una buena idea es...</h1>
-					<p>implementar paneles solares como parte de tu casa e industria</p>
+					<p>¡Implementar paneles solares como parte de tu casa e industria!</p>
 				</div>
 
 			</div>
@@ -417,7 +417,7 @@
 
 				<div class="sale__text">
 					<h1>Venta e Instalación de Paneles Solares</h1>
-					<p>Paneles solares, diseño e instalación de sistemas con energía solar fotovoltaica, térmica solar e iluminación led, ahorro de energía.</p>
+					<p>Paneles solares, diseño e instalación de sistemas con energía solar fotovoltaica, térmica solar, iluminación led y ahorro de energía.</p>
 					<a href="./nosotros.html" class="sale__text__button">¡Conócenos!</a>
 				</div>
 
