--- a/nosotros.html
+++ b/nosotros.html
@@ -206,12 +206,9 @@
 			<div class="container-sm">
 				<div class="us__text">
 					<h1>Nosotros</h1>
-					<p>Nuestra empresa forma parte del núcleo de personas que viven afectadas por los incrementos de luz y el uso inadecuado de energía. En busca de encontrar una
-						soluciónpara contrarrestar el cambio climático, comenzamos hace ya más de10 años, con la creación de sistemas energéticos que se generan a través del viento
-						y el sol, los cuales son totalmente eficientes. Nuestro motivo para seguir adelante espoder ofrecerte energía renovable para que reduzcas gastos.</p>
+					<p>Nuestra empresa forma parte del núcleo de personas que viven afectadas por los incrementos de luz y el uso inadecuado de energía. En busca de encontrar una solución para contrarrestar el cambio climático, comenzamos hace ya más de 10 años, con la creación de sistemas energéticos que se generan a través del viento y el sol, los cuales son totalmente eficientes. Nuestro motivo para seguir adelante es poder ofrecerte energía renovable para que reduzcas gastos.</p>
 					
-					<p>Con el paso de los años nos hemos consolidado como una empresa de alta calidad y profesionalismo en las soluciones energéticas. Nuestros proyectos son de suma
-						importancia en el país, en asuntos gubernamentales a nivel estatal y municipal,tanto comercial como residencial.</p>
+					<p>Con el paso de los años nos hemos consolidado como una empresa de alta calidad y profesionalismo en las soluciones energéticas. Nuestros proyectos son de suma importancia en el país en asuntos gubernamentales a nivel estatal y municipal, tanto comercial como residencial.</p>
 				</div>
 				<div class="us__imagen">
 					<img src="./img/us/nos-1.webp" alt="us" width="100%" height="100%" />
@@ -249,14 +246,12 @@
 
 					<div class="goal__text__one">
 						<h1>Tenemos como meta...</h1>
-						<p>Ofrecerte diseños de acuerdo a tus necesidades, así como productos de calidad, creados a través de un sistema que
-							esté perfilado en el cuidado de la ecología y el bolsillo de quienes requieran de nuestros servicios.</p>
+						<p>Ofrecerte diseños de acuerdo a tus necesidades, así como productos de calidad creados a través de un sistema que esté perfilado en el cuidado de la ecología y el bolsillo de quienes requieran de nuestros servicios.</p>
 					</div>
 
 					<div class="goal__text__one">
 						<h1>Somos una empresa líder...</h1>
-						<p>Estamos enfocados en ser una empresa líder a nivel nacional ofreciendo soluciones de energía, apoyando a nuestros
-							clientes en reducción de gastos y al mismo tiempo cuidando el medio ambiente día a día.</p>
+						<p>Estamos enfocados en ser una empresa líder a nivel nacional ofreciendo soluciones de energía, apoyando a nuestros clientes en reducción de gastos y al mismo tiempo, cuidando día a día del medio ambiente.</p>
 					</div>
 
 					<a href="./contacto.html" class="goal__text__button"  >¡Comienza hoy!</a>
@@ -278,8 +273,7 @@
 							<img src="./img/us/estudio.webp" alt="studio" width="100%" height="100%" />
 						</div>
 						<h2>ESTUDIO</h2>
-						<p>Pensando en el bienestar de nuestra gente,analizamos la situación actual energética
-							para brindarle una solución efectiva de largo plazo y cuidando el valor de su bolsillo.</p>
+						<p>Pensando en el bienestar de nuestra gente, analizamos su situación actual energética para brindarle una solución efectiva de largo plazo y cuidando el valor de su bolsillo..</p>
 					</div>
 
 					<div class="situation__grid__item">
@@ -298,8 +292,7 @@
 							<img src="./img/us/aplicacion.webp" alt="studio" width="100%" height="100%" />
 						</div>
 						<h2>APLICACIÓN</h2>
-						<p>Contamos con personal capacitado para llevar a cabo la tarea de aplicar desarrollos
-							y tomando en cuenta las medidas analizadas anteriormente.</p>
+						<p>Contamos con personal capacitado para llevar a cabo la tarea de aplicar desarrollos, tomando en cuenta las medidas analizadas anteriormente.</p>
 					</div>
 
 					<div class="situation__grid__item">
