--- a/galeria.html
+++ b/galeria.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" type="image/x-icon" href="./public/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Venta e Instalación de Paneles Solares</title>
-	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
+	<title>Paneles solares, calentadores solares e iluminación led</title>
+	<meta name="description" content="Productos certificados fotovoltaicos, térmico solar e iluminación led para el ahorro de energía eléctrica. ¡Descúbrelos en nuestra galería!" />
+	<meta http-equiv="Cache-Control" content="no-cache" />
 	<link rel="stylesheet" href="css/main.css">
 
 </head>
