--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" type="image/x-icon" href="./public/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Venta e Instalación de Paneles Solares</title>
-	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
+	<title>Ahorra al máximo en tu pago de luz usando paneles solares</title>
+	<meta name="description" content="Instala Paneles Solares para reducir tu consumo de energía en industrias, comercios, casa habitación y residencias. ¡Entra y deja de pagar luz!" />
+	<meta http-equiv="Cache-Control" content="no-cache" />
 	<link rel="stylesheet" href="css/main.css">
 	
 </head>
