--- a/products.html
+++ b/products.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" type="image/x-icon" href="./public/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Venta e Instalación de Paneles Solares</title>
-	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
+	<title>Venta e instalación de paneles solares ¡Cotiza hoy mismo!</title>
+	<meta name="description" content="Instala paneles solares en tu casa, comercio o residencia y reduce hasta el 100% de energía eléctrica. ¡Adquiérelos y aprovecha la energía solar!" />
+	<meta http-equiv="Cache-Control" content="no-cache" />
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 	
