--- a/servicios.html
+++ b/servicios.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" type="image/x-icon" href="./public/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Venta e Instalación de Paneles Solares</title>
-	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
+	<title>Soluciones de energía renovable mediante paneles solares</title>
+	<meta name="description" content="Sistemas de paneles fotovoltaicos para casas, negocios, hoteles, etc. ¡Descubre por qué la energía solar puede ayudarte a ahorrarte una buena luz!" />
+	<meta http-equiv="Cache-Control" content="no-cache" />
 	<link rel="stylesheet" href="css/main.css">
 	
 </head>
