--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="icon" type="image/x-icon" href="./public/logo.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Venta e Instalación de Paneles Solares</title>
-	<meta name="description" content="Venta e instalación de paneles Solares en Playa del Carmen. La mejor calidad y precio solo instalando Paneles solares en Playa del Carmen" />
+	<title>Instala un sistema de paneles solares y ya no pagues luz.</title>
+	<meta name="description" content="Contacta a nuestro equipo y reduce tu consumo de electricidad aprovechando la energía solar mediante la instalación de paneles fotovoltaicos." />
+	<meta http-equiv="Cache-Control" content="no-cache" />
 	<link rel="stylesheet" href="css/main.css">
 	
 </head>
